--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,8 @@ uvicorn = "*"
 ujson = "*"
 gunicorn = "*"
 pyyaml = "*"
+dataclasses-json = "*"
+sqlalchemy = "*"
 
 [requires]
 python_version = "3.7"
