--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 # Created by https://www.gitignore.io/api/visualstudiocode,macos,python,virtualenv
 # Edit at https://www.gitignore.io/?templates=visualstudiocode,macos,python,virtualenv
 
+#### Cheetah
+logs/*
+
 ### macOS ###
 # General
 .DS_Store
