--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,19 +5,24 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python: Current File",
+            "name": "Python: Starlette",
             "type": "python",
             "request": "launch",
-            // "program": "startup:app",
+            // "program": "manage.py",
+            "env": {
+                "PYTHONASYNCIODEBUG": "1"
+            },
             "module": "uvicorn",
             "args": [
-                "--workers", "4",
-                 "--loop", "uvloop",
+                // "--workers", "4",
+                "startup:app", 
+                "--loop", "uvloop",
                  "--http", "httptools",
                  "--no-access-log",
-                 "startup:app"
+                 "--reload"
+                 
             ],
-            "console": "integratedTerminal"
+            "console": "integratedTerminal",
         }
     ]
 }
