--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,12 +14,13 @@
             },
             "module": "uvicorn",
             "args": [
-                // "--workers", "4",
                 "startup:app", 
+                "--workers", "1",
                 "--loop", "uvloop",
                  "--http", "httptools",
                  "--no-access-log",
-                 "--reload"
+                //  If need VSCode Debugging work, need mark --reload.
+                //  "--reload", 
                  
             ],
             "console": "integratedTerminal",
