[Infra] 修正 MSSQL 測試環境的連線參數

--- a/odbc.ini
+++ b/odbc.ini
@@ -1,5 +1,4 @@
-[NEXTBANK_IBMB_CHT_SERVER_ODBC]
-Driver=ODBC Driver 13 for SQL Server
-Server=10.1.2.2
-Port=1433
+[NCB_IBMB_CHT_SERVER_ODBC17]
+Driver=ODBC Driver 17 for SQL Server
+Server=10.1.2.2\IBMB_DB1,1433
 Database=NextBankIBMB
