--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,7 +18,7 @@
                 "--workers", "1",
                 "--loop", "uvloop",
                  "--http", "httptools",
-                 "--no-access-log",
+                //  "--no-access-log",
                 //  If need VSCode Debugging work, need mark --reload.
                 //  "--reload", 
                  
