[Feature][Logging]: 加入 PR Template, 調整 Member 的 Repository 位置, 安裝 starlette-context - 加入 PR Template - 調整 Member 的 Repository 位置: 移動至 application layer - 安裝 starlette-context: 後續獲取 request id 寫入 logging

--- a/Pipfile
+++ b/Pipfile
@@ -23,6 +23,7 @@ marshmallow = "*"
 python-multipart = "*"
 pyodbc = "*"
 pymysql = "*"
+starlette-context = "*"
 
 [requires]
 python_version = "3.7"
