[Feature][logging]: 解決自定義 logger 也會在 starlette 的 loggger, 新增顏色, 修正部分 bug -  解決 custom logger 的訊息不會也顯示到 starlette 本身的 loggger: logging.conf.yml 新增 propagate: no - 安裝 colorlog 使 console 呈現色彩 - 調整 logging 時的訊息格式: logging.conf.yml  更新呈現格式 - 重新命名 config 檔名, AppConfigFactory 移動到 factory module - 修正  SQLAlchemyAdapter 的 session 方法為屬性 - 重構 db_adapter 為 database_adapter

--- a/logging.conf.yml
+++ b/logging.conf.yml
@@ -1,21 +1,24 @@
----
 version: 1
-disable_existing_loggers: False
+disable_existing_loggers: no
 
 formatters:
   simple:
-    format: '%(asctime)s - %(name)s - %(levelname)s - %(message)s' # The default format for asctime is %Y-%m-%d %H:%M:%S
+    format: '%(levelname)s:     [%(name)s] - %(asctime)s - [PID > %(process)d] > %(message)s' # The default format for asctime is %Y-%m-%d %H:%M:%S
+  colored_simple:
+    class: colorlog.ColoredFormatter
+    format: '%(log_color)s%(levelname)s%(reset)s:     %(fg_purple)s[%(name)s]%(reset)s - %(asctime)s - [PID > %(process)d] > %(message)s' # The default format for asctime is %Y-%m-%d %H:%M:%S
   detail:
     format:  | # multiple newline
-            ========> %(asctime)s - %(name)s - %(levelname)s - module > %(module)s (line %(lineno)d) - [pid %(process)d]
-            $> %(message)s
+            * [ %(levelname)s ] === %(asctime)s ======================================= 
+            [ METAINFO ] : [NAME > %(name)s] - [MODULE > %(module)s (line %(lineno)d)] - [PID > %(process)d]
+            [ MESSAGE ]  : %(message)s
     datefmt: ''
 
 handlers:
   debug_console:
     class: logging.StreamHandler
     level: DEBUG
-    formatter: simple
+    formatter: colored_simple
     stream: ext://sys.stdout
 
   debug_fileman:
@@ -45,10 +48,9 @@ loggers:
   cheetah:
     level: DEBUG
     handlers: [debug_console, debug_fileman]
+    propagate: no # 是否把訊息如氣泡一樣也往 parent logger 傳播
 
 # Only exist when no sepcific logger name assgin in getLogger function
 # root:
 #   level: NOTSET
 #   handlers: [console]
-
-...
