--- a/config.sample.mssql.json
+++ b/config.sample.mssql.json
@@ -20,7 +20,7 @@
     ],
     "LOGGER": {
         "FILENAME": "logging",
-        "LOGGER_NAME": "cheetah"
+        "LOGGER_NAME": "meteor"
     },
     "ALLOW_ORIGINS": [
         "*"
