--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,8 @@ verify_ssl = true
 mypy = "*"
 flake8 = "*"
 pytest-cov = "*"
+assertpy = "*"
+fakeredis = "*"
 
 [packages]
 starlette = "*"
@@ -25,6 +27,8 @@ pyodbc = "*"
 pymysql = "*"
 starlette-context = "*"
 colorlog = "*"
+redis = "*"
+sutoppu = "*"
 
 [requires]
 python_version = "3.7"
